# reqwest-rs-test

./: Cargo.toml
src/: main.rs
