[package]
name = "abc"
version = "0.1.0"
authors = ["Bachue Zhou <bachue.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.19"

[patch.crates-io]
http = { git = "https://github.com/upsuper/http-rs.git", branch = "preserve-invalid" }
